ms-produto/k8s/ms-produto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-produto
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ms-produto
  template:
    metadata:
      labels:
        app: ms-produto
    spec:
      containers:
        - name: ms-produto
          image: eduardo1112/ms-produto:1.1.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /produtos
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: ms-produto
spec:
  selector:
    app: ms-produto
  ports:
    - port: 8080
      targetPort: 8080
